--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^7.1.3",
     "react-scroll": "^1.9.0",
+    "sass": "^1.83.4",
+    "scss": "^0.2.4",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
